# sales_02

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: windows-build.yml
deploy/: Caddyfile.nip-io  Caddyfile.selfsigned  DEPLOY.md  gen-selfsigned-cert.sh  sales-retro.service  setup.sh  teardown.sh
packaging/: PACKAGING_NOTES.md  build.ps1  build.sh  installer.iss  launcher.py  sales_retro.spec
src/: pyproject.toml
src/sales_retro_agent/: __init__.py  asr_types.py  asr_volc.py  audio_sources.py  coach_debug.py  config.py  deepseek_client.py  llm_coach.py  llm_debug.py  realtime_coach.py  realtime_runner.py  text_diff.py  volc_protocol.py  web.py
src/sales_retro_agent/web_static/: app.js  backend.html  backend.js  index.html  styles.css
src/tests/: test_asr_init_payload.py  test_asr_utterance_dedup.py  test_audio_decode.py  test_audio_upload_raw.py  test_backend_work_state.py  test_coach_upload_single_flight.py  test_diagnostics_clear_after.py  test_friendly_errors.py  test_lazy_audio_import.py  test_timestamped_alerts.py  test_timestamped_transcript.py  test_web_defaults.py  test_web_static_packaged.py
